@@ -511,6 +511,7 @@ JHELP_COMPONENTS_FINDER_MANAGE_INDEXED_CONTENT="Components_Finder_Manage_Indexed
 JHELP_COMPONENTS_FINDER_MANAGE_CONTENT_MAPS="Components_Finder_Manage_Content_Maps"
 JHELP_COMPONENTS_FINDER_MANAGE_SEARCH_FILTERS="Components_Finder_Manage_Search_Filters"
 JHELP_COMPONENTS_FINDER_MANAGE_SEARCH_FILTERS_EDIT="Components_Finder_Manage_Search_Filters_Edit"
+JHELP_COMPONENTS_JOOMLA_UPDATE="Components_Joomla_Update"
 JHELP_COMPONENTS_MESSAGING_INBOX="Components_Messaging_Inbox"
 JHELP_COMPONENTS_MESSAGING_READ="Components_Messaging_Read"
 JHELP_COMPONENTS_MESSAGING_WRITE="Components_Messaging_Write"
