@@ -3,8 +3,8 @@
     <tag>fr-FR</tag>
 	<name>French (fr-FR)</name>
 	<description>French administrator language for Joomla 3.0</description>
-	<version>2.5.10.1</version>
-	<creationDate>19 mar 2013</creationDate>
+	<version>2.5.11.1</version>
+	<creationDate>27 avr 2013</creationDate>
 	<author>French translation team : joomla.fr</author>
 	<authorEmail>traduction@joomla.fr</authorEmail>
 	<authorUrl>www.joomla.fr</authorUrl>
