@@ -2,8 +2,8 @@
 <extension version="2.5" client="administrator" type="language" method="upgrade">
 	<name>French (fr-FR)</name>
     <tag>fr-FR</tag>
-	<version>2.5.10.1</version>
-	<creationDate>19 mar 2013</creationDate>
+	<version>2.5.11.1</version>
+	<creationDate>27 avr 2013</creationDate>
 	<author>French translation team : joomla.fr</author>
 	<authorEmail>traduction@joomla.fr</authorEmail>
 	<authorUrl>www.joomla.fr</authorUrl>
