@@ -134,10 +134,7 @@ JHtml::_('behavior.framework');
 		src="<?php echo htmlspecialchars($images->image_intro); ?>" alt="<?php echo htmlspecialchars($images->image_intro_alt); ?>"/>
 	</div>
 <?php endif; ?>
-
-<?php if ($params->get('show_intro')) : ?>
 <?php echo $this->item->introtext; ?>
-<?php endif; ?>
 
 <?php if ($params->get('show_readmore') && $this->item->readmore) :
 	if ($params->get('access-view')) :
