@@ -103,7 +103,6 @@ INSTL_SAMPLE_DATA_SET="Données exemples en anglais (défaut)"
 INSTL_SAMPLE_BLOG_SET="Données exemples de type blog en anglais"
 INSTL_SAMPLE_BLOG_FR_SET="Données exemples de type blog en français"
 INSTL_SAMPLE_BROCHURE_SET="Données exemples de type brochure en anglais"
-INSTL_SAMPLE_BROCHURE_FR_SET="Données exemples de type brochure en français"
 
 ;Complete view
 INSTL_COMPLETE="Terminer"
