@@ -26,6 +26,16 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+-------------------- 2.5.11 Stable Release 26-April-2013] ------------------
+
+26-Apr-2013 Mark Dexter
+ # [#30681] Error in Database tab in Extension Manager. Thanks Amirol Ahmad.
+ # [#30702] Only titles display in featured/blogged views when hide intro text is selected.
+ # [#30725] Exception thrown for empty path. Thanks Elin Waring.
+
+26-Apr-2013 Jean-Marie Simonet
+ # [#30717] Memcached driver breaks Joomla configuration page. Thanks Ofer Cohen
+
 -------------------- 2.5.10 Stable Release 24-April-2013] ------------------
 
 23-Apr-2013 Mark Dexter
